chore: code reordering

--- a/src/app/options.html
+++ b/src/app/options.html
@@ -286,6 +286,6 @@
     <p>Made with ☕️ by <a href="https://github.com/andemengo" target="_blank">@andemengo</a></p>
   </footer>
 
-  <script src="options.js"></script>
+  <script src="src/app/options.js"></script>
 </body>
 </html>
